# board-tui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.sentrux/: baseline.json
.tasks/: adversarial-test-jsonl-reader.md  adversarial-test-log-buffer.md  adversarial-test-malformed-instanceid.md  adversarial-test-mcp-subscription.md  adversarial-test-pirpcclient-null.md  adversarial-test-podman-failures.md  adversarial-test-queue-crash.md  adversarial-test-slot-race-condition.md  adversarial-test-state-corruption.md  adversarial-test-worktree-merge.md  board-tui-delegation-e2e-tests.md  board-tui-delegation-queue-integration.md  board-tui-e2e-test-suite.md  board-tui-fix-bad-dev-dep.md  board-tui-fix-cli-tests.md  board-tui-fix-dump-roundtrip-test.md  board-tui-fix-mcp-test-dep.md  board-tui-jsonl-output.md  board-tui-list-delegated-tasks-mcp.md  board-tui-list-tasks-include-done-param.md  board-tui-mcp-server.md  board-tui-parent-subtask-hierarchical-display.md  board-tui-render-subtasks-subindented-under-parent-with-collapse-count.md  board-tui-run-tests.md  board-tui-scaffold.md  board-tui-setup-venv-and-run-tests.md  board-tui-warn-when-parent-slug-does-not-exist.md  distribute-task-cards-and-delegate-skills-to-board-tuiskills.md  e2e-test-add-card.md  e2e-test-board-rendering.md  e2e-test-copy-actions.md  e2e-test-detail-panel.md  e2e-test-focus-switch.md  e2e-test-markdown-structure.md  e2e-test-mine-highlight.md  e2e-test-move-mode.md  e2e-test-navigation.md  e2e-test-parent-display.md  e2e-test-refresh.md  e2e-test-scroll.md  (+8 more)
skills/: README.md
(+30 files in other folders)
